Fix icon alignment

--- a/less/partial/people.less
+++ b/less/partial/people.less
@@ -22,7 +22,7 @@
     
     display: grid;
     grid-template-columns: calc(100% - 80px) 80px;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 20px calc(100% - 20px);
     
     .icon-list {
       grid-column: 1;
